--- a/app/src/main/res/layout/travel_itinerary.xml
+++ b/app/src/main/res/layout/travel_itinerary.xml
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/abeezee"
+        android:fontFamily="@font/inter"
         android:text="Travel Itinerary"
         android:textColor="@color/dark_blue"
-        android:textSize="27sp"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,8 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/abeezee"
+        android:layout_marginTop="8dp"
         android:text="First Name"
         android:textColor="@color/darker_gray"
         android:textSize="16sp"
@@ -93,7 +92,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/abeezee"
         android:text="Email"
         android:textColor="@color/darker_gray"
         android:textSize="16sp"
@@ -106,7 +104,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/abeezee"
         android:text="Travel Destination"
         android:textColor="@color/darker_gray"
         android:textSize="16sp"
@@ -130,7 +127,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/abeezee"
         android:text="Traveling With Others?"
         android:textColor="@color/darker_gray"
         android:textSize="16sp"
@@ -167,11 +163,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="214dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/abeezee"
         android:text="Travel Group"
         android:textColor="@color/darker_gray"
         android:textSize="16sp"
-        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
@@ -192,7 +186,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/abeezee"
         android:text="Itinerary"
         android:textColor="@color/darker_gray"
         android:textSize="16sp"
@@ -204,7 +197,7 @@
         android:layout_width="361dp"
         android:layout_height="50dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="@color/dark_blue"
         android:fontFamily="@font/abeezee"
         android:text="Submit"
@@ -237,7 +230,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/abeezee"
         android:text="Dates of Travel"
         android:textColor="@color/darker_gray"
         android:textSize="16sp"
