--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -3,74 +3,136 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
+
+    <TextView
+        android:id="@+id/dash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="316dp"
+        android:layout_marginEnd="312dp"
+        android:fontFamily="@font/inter"
+        android:text="Dashboard"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:text="Hello, Sarah!"
-        android:textColor="@color/dark_blue"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="276dp"
+        android:fontFamily="@font/inter"
+        android:text="Hello"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="341dp"
-        android:layout_height="44dp"
-        android:backgroundTint="#3F51B5"
-        android:text="Chatbot"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="671dp" />
-
-    <Button
-        android:id="@+id/Events"
-        android:layout_width="343dp"
-        android:layout_height="42dp"
-        android:backgroundTint="#3F51B5"
-        android:text="Events"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="534dp" />
-
-    <Button
-        android:id="@+id/travel"
-        android:layout_width="348dp"
-        android:layout_height="45dp"
-        android:backgroundTint="#3F51B5"
-        android:text="Travel Itinerary"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="395dp" />
-
-    <Button
-        android:id="@+id/meal"
-        android:layout_width="344dp"
-        android:layout_height="43dp"
-        android:backgroundTint="#3F51B5"
-        android:text="Meal Prep"
-        tools:layout_editor_absoluteX="39dp"
-        tools:layout_editor_absoluteY="467dp" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="345dp"
-        android:layout_height="44dp"
-        android:backgroundTint="#3F51B5"
-        android:text="Feedback"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="601dp" />
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="340dp"
+        android:layout_height="229dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="576dp"
+        android:src="@drawable/blue_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/signout"
+        android:layout_width="103dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@android:color/transparent"
+        android:text="Sign Out"
+        android:textColor="@color/dark_grey"
+        app:cornerRadius="5sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="@color/dark_grey"
+        app:strokeWidth="1sp" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="407dp"
+        android:layout_height="259dp"
+        android:layout_marginBottom="396dp"
+        android:backgroundTint="@android:color/transparent"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:srcCompat="@drawable/main"
+        tools:layout_editor_absoluteX="2dp" />
+
+    <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:text="Sign Out"
-        android:textColor="#3F51B5"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="356dp" />
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="336dp"
+        android:fontFamily="@font/inter"
+        android:text="Hello"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="256dp"
+        android:fontFamily="@font/inter_semibold"
+        android:text="Sarah,"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="344dp"
+        android:backgroundTint="@android:color/transparent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/forms" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="344dp"
+        android:backgroundTint="@android:color/transparent"
+        app:layout_constraintStart_toEndOf="@+id/imageButton2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/hub" />
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="516dp"
+        android:backgroundTint="@android:color/transparent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/feedback" />
+
+    <ImageButton
+        android:id="@+id/imageButton5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="516dp"
+        android:backgroundTint="@android:color/transparent"
+        app:layout_constraintStart_toEndOf="@+id/imageButton4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/chat" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
