--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -19,11 +19,11 @@
 
     <TextView
         android:id="@+id/sign_up"
-        android:layout_width="180dp"
-        android:layout_height="58dp"
+        android:layout_width="181dp"
+        android:layout_height="64dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="92dp"
-        android:fontFamily="@font/abeezee"
+        android:layout_marginTop="84dp"
+        android:fontFamily="@font/inter"
         android:text="Sign Up"
         android:textColor="@color/dark_blue"
         android:textSize="48sp"
