--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#274C77">
+    android:background="@color/dark_blue">
 
     <TextView
         android:id="@+id/textView2"
@@ -12,7 +12,7 @@
         android:layout_height="46dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/abeezee"
+        android:fontFamily="@font/inter"
         android:text="Let's Get Started!"
         android:textColor="@color/white"
         android:textSize="25sp"
@@ -25,7 +25,7 @@
         android:layout_height="51dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="396dp"
-        android:fontFamily="@font/abeezee"
+        android:fontFamily="@font/inter"
         android:text="Hello."
         android:textAllCaps="false"
         android:textColor="@color/white"
