--- a/app/src/main/res/drawable/spinner_background.xml
+++ b/app/src/main/res/drawable/spinner_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
         <!-- Background color for the spinner -->
-        <item android:drawable="@android:color/grey" />
+        <item android:drawable="@color/grey" />
         <!-- Arrow color for the spinner -->
         <item android:drawable="@drawable/spinner_arrow" android:right="8dp" />
     </layer-list>
