--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -210,7 +210,7 @@
         app:layout_constraintTop_toBottomOf="@+id/signUp" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/signInButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="164dp"
