--- a/app/src/main/res/layout/travel_itinerary.xml
+++ b/app/src/main/res/layout/travel_itinerary.xml
@@ -234,7 +234,7 @@
 
     <TextView
         android:id="@+id/textView34"
-        android:layout_width="wrap_content"
+        android:layout_width="361dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="10dp"
