fixed file structure

--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -27,8 +27,9 @@
         android:background="@drawable/form_box"
         android:backgroundTint="@color/grey"
         android:ems="10"
-        android:hint="      Email"
-        android:textSize="14sp"
+        android:hint="Email"
+        android:paddingStart="17dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textView37"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.307"
@@ -98,9 +99,10 @@
         android:background="@drawable/form_box"
         android:backgroundTint="@color/grey"
         android:ems="10"
-        android:hint="      Password"
+        android:hint="Password"
         android:inputType="textPassword"
-        android:textSize="14sp"
+        android:paddingStart="17dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
         app:layout_constraintStart_toStartOf="parent"
