--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -21,7 +21,7 @@
         android:id="@+id/sign_up"
         android:layout_width="181dp"
         android:layout_height="64dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="34dp"
         android:layout_marginTop="84dp"
         android:fontFamily="@font/inter"
         android:text="Sign Up"
@@ -41,10 +41,10 @@
         android:background="@drawable/form_box"
         android:backgroundTint="@color/grey"
         android:ems="10"
-        android:hint="      Password"
+        android:hint="Password"
         android:inputType="textPassword"
-        android:textColor="#3F51B5"
-        android:textSize="14sp"
+        android:paddingStart="17dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
@@ -104,9 +104,10 @@
         android:background="@drawable/form_box"
         android:backgroundTint="@color/grey"
         android:ems="10"
-        android:hint="      Last Name"
+        android:hint="Last Name"
+        android:paddingStart="17dp"
         android:singleLine="false"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.307"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,9 +123,10 @@
         android:background="@drawable/form_box"
         android:backgroundTint="@color/grey"
         android:ems="10"
-        android:hint="      First Name"
+        android:hint="First Name"
+        android:paddingStart="17dp"
         android:singleLine="false"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
@@ -151,10 +153,11 @@
         android:background="@drawable/form_box"
         android:backgroundTint="@color/grey"
         android:ems="10"
-        android:hint="      Email"
+        android:hint="Email"
         android:inputType="textEmailAddress"
+        android:paddingStart="17dp"
         android:singleLine="false"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +172,9 @@
         android:layout_marginEnd="24dp"
         android:background="@drawable/form_box"
         android:backgroundTint="@color/grey"
-        android:textSize="14sp"
+        android:paddingStart="17dp"
+        android:textColor="#3F51B5"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/organizationalRole" />
