--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -10,12 +10,12 @@
         android:id="@+id/dash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="316dp"
-        android:layout_marginEnd="312dp"
         android:fontFamily="@font/inter"
         android:text="Dashboard"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -34,18 +34,18 @@
         android:id="@+id/imageView2"
         android:layout_width="340dp"
         android:layout_height="229dp"
-        android:layout_marginEnd="124dp"
-        android:layout_marginBottom="576dp"
+        android:layout_marginStart="-50dp"
+        android:layout_marginTop="-75dp"
         android:src="@drawable/blue_logo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/signout"
-        android:layout_width="103dp"
-        android:layout_height="46dp"
+        android:layout_width="115dp"
+        android:layout_height="43dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="18dp"
         android:backgroundTint="@android:color/transparent"
         android:text="Sign Out"
         android:textColor="@color/dark_grey"
@@ -57,38 +57,39 @@
 
     <ImageButton
         android:id="@+id/bannerButton"
-        android:layout_width="407dp"
-        android:layout_height="259dp"
-        android:layout_marginBottom="396dp"
+        android:layout_width="388dp"
+        android:layout_height="237dp"
+        android:layout_marginTop="90dp"
         android:backgroundTint="@android:color/transparent"
         android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/main" />
 
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="64dp"
-        android:layout_marginEnd="336dp"
         android:fontFamily="@font/inter"
         android:text="Hello"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
         android:layout_marginTop="64dp"
-        android:layout_marginEnd="256dp"
         android:fontFamily="@font/inter_semibold"
         android:text="Sarah,"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/text"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
