--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -59,7 +59,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/white"
         android:text="Sign In"
-        android:textColor="#274C77"
+        android:textColor="@color/dark_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
