--- a/app/src/main/res/drawable/form_button.xml
+++ b/app/src/main/res/drawable/form_button.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"><!-- Replace with your button color -->
-        <corners android:radius="0dp"/> <!-- This ensures corners are straight -->
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+        <corners android:radius="0dp"/>
+        <solid android:color="@color/grey"/>
+        <stroke android:color="#FFD6D6D6"
+            android:width="1dp"/>
+</shape>
 
 <!--    android:shape="rectangle"-->
