--- a/app/src/main/res/layout/meal_results.xml
+++ b/app/src/main/res/layout/meal_results.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/abeezee"
+        android:fontFamily="@font/inter"
         android:text="Meal Results"
         android:textSize="27sp"
         android:textStyle="bold"
