--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,17 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="dark_blue">#274C77</color>
     <color name="purple">#3F51B5</color>
     <color name="dark_gray">#8D8D8D</color>
     <color name="darker_gray">#707070</color>
+    <color name="grey">#E7ECEF</color>
+    <color name="dark_blue">#3B8198</color>
+    <color name="grey_blue">#6096BA</color>
+    <color name="blue">#A3CEF1</color>
+    <color name="dark_grey">#8B8C89</color>
+    <color name="primary">#1C2E46</color>
+    <color name="primary_dark">#142232</color>
+    <color name="primary_text">#212121</color>
+    <color name="input_background">#ECECEC</color>
+    <color name="icon_background">#20FFFFFF</color>
 </resources>
