Fully functional database

--- a/app/src/main/res/layout/event_hub.xml
+++ b/app/src/main/res/layout/event_hub.xml
@@ -24,10 +24,10 @@
             android:layout_marginBottom="50dp"
             android:background="#3F51B5"
             android:id="@+id/btnNewEvent" />
-      <!--  <ListView
+        <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/eventsListView"/> -->
+            android:id="@+id/eventListView"/>
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
