--- a/app/src/main/res/layout/new_event.xml
+++ b/app/src/main/res/layout/new_event.xml
@@ -44,7 +44,8 @@
                 android:layout_marginTop="14dp"
                 android:text="@string/event_title"
                 android:textColor="@color/darker_gray"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="bold"/>
 
             <EditText
                 android:id="@+id/edTxtEventTitle"
@@ -65,7 +66,8 @@
                 android:layout_marginTop="15dp"
                 android:text="@string/event_description"
                 android:textColor="@color/darker_gray"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="bold"/>
 
             <EditText
                 android:id="@+id/edTxtEventDescription"
@@ -92,7 +94,8 @@
                     android:layout_height="match_parent"
                     android:text="@string/event_type"
                     android:textColor="@color/darker_gray"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
 
                 <Spinner
                     android:id="@+id/spinnerEventType"
@@ -117,7 +120,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/event_max_nr_attendees"
                     android:textColor="@color/darker_gray"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
 
                 <EditText
                     android:id="@+id/edTxtEventAttendees"
@@ -139,7 +143,8 @@
                 android:layout_marginTop="15dp"
                 android:text="@string/event_time"
                 android:textColor="@color/darker_gray"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="bold"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
