--- a/app/src/main/res/layout/event_hub.xml
+++ b/app/src/main/res/layout/event_hub.xml
@@ -14,16 +14,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
-        <Button
-            android:layout_width="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/event_add_button"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="50dp"
-            android:background="#3F51B5"
-            android:id="@+id/btnNewEvent" />
+            android:gravity="center_horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/event_add_button"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="50dp"
+                android:background="#3F51B5"
+                android:id="@+id/btnNewEvent" />
+            <Space
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/event_see_my_events"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="50dp"
+                android:background="#3F51B5"
+                android:id="@+id/btnMyEvents" />
+        </LinearLayout>
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
