--- a/app/src/main/res/layout/event_link_item.xml
+++ b/app/src/main/res/layout/event_link_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/textViewName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/darker_gray"
         android:textSize="12sp"
         android:gravity="start" />
 
@@ -16,6 +17,7 @@
         android:id="@+id/textViewUrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/darker_gray"
         android:textSize="12sp"
         android:gravity="start"
         android:layout_marginStart="20dp"/>
