--- a/app/src/main/res/layout/new_event.xml
+++ b/app/src/main/res/layout/new_event.xml
@@ -294,7 +294,8 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="60dp"
                 android:isScrollContainer="false"
-                android:scrollbars="none" />
+                android:scrollbars="none"
+                android:divider="@null"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -374,14 +375,15 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="60dp"
                 android:isScrollContainer="false"
-                android:scrollbars="none" />
+                android:scrollbars="none"
+                android:divider="@null"/>
 
             <Button
                 android:id="@+id/btnAddEvent"
                 android:layout_width="342dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginEnd="30dp"
                 android:backgroundTint="@color/dark_blue"
                 android:text="@string/event_add_button_text"
